@@ -1,3 +1,6 @@
+recent:
+	add "no skeleton" option
+
 0.5: that's better
 	much fixing of iptables driver.  Now shouldn't leak
 	like the proverbial sieve
@@ -26,4 +29,4 @@
 	iptables driver
 	a few bugs
 
-$Id: HISTORY,v 1.10 2001/10/23 20:13:04 matthew Exp $
+$Id: HISTORY,v 1.11 2001/11/04 22:43:55 matthew Exp $
